<resources>
    <string name="app_name" translatable="false">Altruino</string>
    <string name="button_up_label">Forward</string>
    <string name="button_down_label">Backwards</string>
    <string name="button_left_label">Turn left</string>
    <string name="button_right_label">Turn right</string>

    <string name="select_device_title">Select a device</string>

    <string name="device_list_title">Available bluetooth devices</string>
    <string name="bluetooth_disabled_info">Bluetooth is disabled</string>
    <string name="bluetooth_enable_button">Enable bluetooth</string>
    <string name="bluetooth_enabled_info">Bluetooth is enabled, go to \"available\" tab</string>

    <string name="view_pager_title_status">Status</string>
    <string name="view_pager_title_available">Available</string>
    <string name="view_pager_title_bonded">Bonded</string>

    <string name="bluetooth_status_fragment_rationale_bluetooth_dialog_title">Why do we need Bluetooth permission?</string>
    <string name="bluetooth_status_fragment_rationale_bluetooth_admin_dialog_title">Why do we need Bluetooth admin permission?</string>
    <string name="bluetooth_status_fragment_rationale_bluetooth_dialog_message">We need to access Bluetooth for searching devices and connecting to them.</string>
    <string name="bluetooth_status_fragment_rationale_bluetooth_admin_dialog_message">We need this permission for enabling or disabling Bluetooth from the app.</string>
    <string name="bluetooth_status_fragment_rationale_dialog_consent">I consent</string>
    <string name="bluetooth_status_fragment_rationale_dialog_reject">No, thank you</string>

</resources>